# e7-onboarding

./: .gitignore  README.md  filter_data.py  metric.py  my_preds.csv  precompute_spectrograms.py  prepare_dataset.py  pyproject.toml  submit.py  train.py
configs/: default.yaml
scripts/: filter_sample_submission.py
