[project]
name = "e7-onboarding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
]
